# aot-api-py

./: .gitignore  LICENSE  Procfile  README  README.md  database.db  pyproject.toml  requirements.txt
aot_quotes/: main.py
aot_quotes/common/db/: __init__.py  quotes.py
aot_quotes/core/quote/: service.py  views.py
aot_quotes/mixins/: database.py
migrations/: __main__.py
seed/: __main__.py  data.txt
